force-app/main/default/objects/b3o__Chat_Message__c/b3o__Chat_Message__c.object-meta.xml
<CustomObject>
    <label>Chat Message</label>
    <nameField>
        <displayFormat>CHAT-M-{0}</displayFormat>
        <label>Chat Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chat Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>