force-app/main/default/objects/b3o__Chat_Message__c/fields/b3o__Body__c.field-meta.xml
<CustomField>
    <fullName>b3o__Body__c</fullName>
    <label>Body</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>