force-app/main/default/objects/b3o__Chat_Message__c/fields/b3o__Contact__c.field-meta.xml
<CustomField>
    <fullName>b3o__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Chat Messages</relationshipLabel>
    <relationshipName>Chat_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>