force-app/main/default/objects/b3o__Chat_Message__c/fields/b3o__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>b3o__Error_Message__c</fullName>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>