force-app/main/default/objects/b3o__Chat_Message__c/fields/b3o__Message_Sender_Initials__c.field-meta.xml
<CustomField>
    <fullName>b3o__Message_Sender_Initials__c</fullName>
    <formula>if(ispickval(b3o__Type__c, &apos;Inbound&apos;), if(b3o__Contact__r.FirstName != null, LEFT(b3o__Contact__r.FirstName, 1),&apos;&apos;) &amp; if(b3o__Contact__r.LastName != null, LEFT(b3o__Contact__r.LastName, 1),&apos;&apos;), if(CreatedBy.FirstName != null, LEFT(CreatedBy.FirstName, 1),&apos;&apos;) &amp; if(CreatedBy.LastName != null, LEFT(CreatedBy.LastName, 1),&apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Message Sender Initials</label>
    <type>Text</type>
</CustomField>