force-app/main/default/objects/b3o__Chat_Message__c/fields/b3o__Sent_from_Current_User__c.field-meta.xml
<CustomField>
    <fullName>b3o__Sent_from_Current_User__c</fullName>
    <formula>$User.Id == CreatedBy.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sent from Current User</label>
    <type>Checkbox</type>
</CustomField>